# giga_connectome

./: .all-contributorsrc  .dockerignore  .flake8  .gitignore  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  descriptor.json  pyproject.toml  requirements.txt  tmp  tox.ini
.github/: dependabot.yml
.github/workflows/: descriptor.yml  docker.yml  draft-paper.yml  test.yml  update_precommit_hooks.yml  validate_cff.yml
docs/: requirements.txt
docs/source/: api.rst  changes.md  conf.py  contributing.md  index.rst  installation.md  outputs.md  usage.md  workflow.md
docs/source/images/: giga_connectome.drawio
giga_connectome/: __init__.py  _version.py  atlas.py  average_conn.py  bids.py  connectome.py  denoise.py  logger.py  main.py  make_groupmask.py  make_timeseries.py  mask.py  metadata.py  methods.py  outputs.py  postprocess.py  run.py  timeseries.py  utils.py  workflow.py
giga_connectome/data/: README.md  __init__.py  atlas_meta.json  bids_entities.json  denoise_strategy.json
giga_connectome/data/atlas/: DiFuMo.json  HarvardOxfordCortical.json  HarvardOxfordCorticalSymmetricSplit.json  HarvardOxfordSubcortical.json  MIST.json  Schaefer2018.json  Schaefer20187Networks.json
giga_connectome/data/denoise_strategy/: acompcor50.json  icaaroma.json  scrubbing.2+gsr.json  scrubbing.2.json  scrubbing.5+gsr.json  scrubbing.5.json  simple+gsr.json  simple.json
giga_connectome/data/methods/: template.jinja
giga_connectome/tests/: test_atlas.py  test_bids.py  test_cli.py  test_connectome.py  test_denoise.py  test_mask.py  test_metadata.py  test_methods.py  test_utils.py
paper/: paper.bib  paper.md
tests/: test_atlas.py  test_cli.py  test_connectome.py  test_denoise.py  test_mask.py  test_utils.py
tests/data/: bids_filter.json
tools/: download_templates.py
