[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "giga_connectome"
description = "Generate connectome from fMRIPrep outputs"
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
authors = [
  { name="Hao-Ting Wang", email="htwangtw@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "h5py",
  "nilearn",
  "pybids >=0.15.0, <0.16.0",
  "templateflow < 23.0.0",
  "tqdm",
]
dynamic = ["version"]

[project.scripts]
giga_connectome = "giga_connectome.run:main"

[project.optional-dependencies]
dev = [
  "black",
  "pre-commit",
  "giga_connectome[test]",
]
test = [
  "pytest",
  "pytest-cov",
]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "myst-parser"
]
# Aliases
tests = ["giga_connectome[test]"]

[project.urls]
"Homepage" = "https://github.com/simexp/giga_connectome"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "giga_connectome/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["giga_connectome"]
exclude = [
  ".github",
  "giga_connectome/data/test_data"
]

[tool.black]
target-version = ['py38']
exclude = "giga_connectome/_version.py"
line_length = 79

[tool.pytest.ini_options]
markers = [
    "smoke: smoke tests that will run on a downsampled real dataset (deselect with '-m \"not smoke\"')",
]
