[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "giga_connectome"
description = "Generate connectome from fMRIPrep outputs"
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
authors = [
  { name="Hao-Ting Wang", email="htwangtw@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "nilearn[plotting] >=0.10.3",
  "pybids >=0.15.0, <0.16.0",
  "templateflow < 23.0.0",
  "setuptools",
  "jinja2 >= 2.0",
  "rich",
]
dynamic = ["version"]

[project.scripts]
giga_connectome = "giga_connectome.run:main"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "pre-commit",
  "giga_connectome[test]",
  'tox',
  'mypy',
  'types-all',
  'pandas-stubs',
  'types-tqdm'
]
test = [
  "pytest",
  "pytest-cov",
]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "myst-parser",
  "sphinx-argparse"
]
# Aliases
tests = ["giga_connectome[test]"]

[project.urls]
"Homepage" = "https://github.com/bids-apps/giga_connectome"
"Documentation" = "https://giga-connectome.readthedocs.io/en/latest/"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "giga_connectome/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["giga_connectome"]
exclude = [
  ".github",
  "giga_connectome/data/test_data"
]

[tool.black]
target-version = ['py38']
exclude = "giga_connectome/_version.py"
line-length = 79

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = ["ignore-without-code", "redundant-expr"]  # "truthy-bool"
no_implicit_optional = true
show_error_codes = true
# strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "bids.*",
    "giga_connectome._version",
    "h5py.*",
    "nibabel.*",
    "nilearn.*",
    "nilearn.connectome.*",
    "nilearn.image.*",
    "nilearn.interfaces.*",
    "nilearn.maskers.*",
    "nilearn.masking.*",
    "rich.*",
    "scipy.ndimage.*",
    "templateflow.*",
]

[[tool.mypy.overrides]]
ignore_errors = true
module = [
    'giga_connectome.tests.*',
    'download_templates',
    'conf',
]

[tool.pytest.ini_options]
minversion = "7"
log_cli_level = "INFO"
xfail_strict = true
testpaths = ["giga_connectome/tests"]
addopts = ["-ra", "--strict-config", "--strict-markers", "--doctest-modules", "-v"]
markers = [
    "smoke: smoke tests that will run on a downsampled real dataset (deselect with '-m \"not smoke\"')",
]
# filterwarnings = ["error"]
