[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "giga_connectome"
description = "Generate connectome from fMRIPrep outputs"
readme = "README.md"
requires-python = ">=3.10"
license = { file="LICENSE" }
authors = [
  { name="Hao-Ting Wang", email="htwangtw@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
]
dependencies = [
  "nilearn[plotting] >= 0.13.1",
  "pybids >= 0.22.0",
  "templateflow >= 25.1.2",
  "jinja2 >= 3.1.6",
  "rich >= 14.3.3",
]
dynamic = ["version"]

[project.scripts]
giga_connectome = "giga_connectome.run:main"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "giga_connectome[test]",
  'tox',
]
test = [
  "pytest",
  "pytest-cov",
]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "myst-parser",
  "sphinx-argparse"
]
# Aliases
tests = ["giga_connectome[test]"]

[project.urls]
"Homepage" = "https://github.com/bids-apps/giga_connectome"
"Documentation" = "https://giga-connectome.readthedocs.io/en/latest/"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "giga_connectome/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["giga_connectome"]
exclude = [
  ".github",
]

[tool.black]
target-version = ['py38']
exclude = "giga_connectome/_version.py"
line-length = 79

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = ["ignore-without-code", "redundant-expr"]  # "truthy-bool"
no_implicit_optional = true
show_error_codes = true
# strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "bids.*",
    "giga_connectome._version",
    "h5py.*",
    "nibabel.*",
    "nilearn.*",
    "nilearn.connectome.*",
    "nilearn.image.*",
    "nilearn.interfaces.*",
    "nilearn.maskers.*",
    "nilearn.masking.*",
    "rich.*",
    "scipy.ndimage.*",
    "templateflow.*",
    "pytest.*",
]

[[tool.mypy.overrides]]
ignore_errors = true
module = [
    'download_templates',
    'conf',
]

[tool.pytest.ini_options]
minversion = "7"
log_cli_level = "INFO"
xfail_strict = true
testpaths = ["giga_connectome/tests"]
addopts = ["-ra", "--strict-config", "--strict-markers", "--doctest-modules", "-v" , "--showlocals"]
markers = [
    "smoke: smoke tests that will run on a downsampled real dataset (deselect with '-m \"not smoke\"')",
]
# filterwarnings = ["error"]



[tool.ruff]
extend-exclude = ["giga_connectome/_version.py"]
include = [
    "giga_connectome",
    "tools/**/*.py",
    "docs/**/*.py",
    "tests/**/*.py"
]
indent-width = 4
line-length = 79

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
    "ARG001", #TODO
    "ARG002", #TODO?
    "ARG005",
    "D100", #TODO
    "D101", #TODO
    "D102", #TODO
    "D103", #TODO
    "D105", #TODO
    "D205",
    "D301",
    "D401", #TODO
    "E741",
    "ERA001",
    "N801", #TODO
    "N806",
    "N806",
    "NPY002", #TODO
    "PERF203",
    "PLR2004",
    "PTH100", #TODO
    "PTH123", #TODO
    "PTH207",
    # Avoid linter rules conflicting with the formatter
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812",
    "COM819",
    "E111",
    "E114",
    "E117",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191"
]
# List of all the ruff rules (includes why the rule matters)
# https://docs.astral.sh/ruff/rules/
select = [
    "ARG",
    "B",
    "C4",
    "C90",
    "D",
    "E",
    "ERA",
    "F",
    "FLY",
    "FURB",
    "I",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PTH",
    "PD",
    "PGH",
    "PLR",
    "RUF",
    "SIM",
    "UP",
    "W"
]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 23

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-args
max-args = 27
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-branches
max-branches = 22
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-returns
max-returns = 8
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-statements
max-statements = 96
